[package]
name = "bevy_image_export"
version = "0.12.0"
edition = "2021"
categories = ["graphics", "rendering"]
keywords = ["creative", "coding", "sketching"]
description = "Bevy plugin for rendering image sequences"
documentation = "https://docs.rs/bevy_image_export"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/paulkre/bevy_image_export"

[dependencies]
bevy = { version = "0.15", default-features = false, features = [
  "bevy_render",
  "bevy_asset",
] }
image = { version = "0.25", default-features = false }
futures = "0.3"
futures-lite = "2.1"
wgpu = "23"
bytemuck = "1.13"

[features]
default = ["png"]
png = ["image/png", "bevy/png"]
jpeg = ["image/jpeg", "bevy/jpeg"]
exr = ["image/exr", "bevy/exr"]

[dev-dependencies]
bevy = "0.15"
image = { version = "0.25", default-features = false, features = ["exr"] }
anyhow = "1.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
